Feat: #511 - 지도 표기용 API response에 address 추가